--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,12 +6,129 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdulla Al Mamun</title>
-    <link rel="stylesheet" href="style.csss">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>helo</h1>
-    <img src="" alt="">
+    <header>
+        <section>
+            <nav>
+                <div class="logo">
+                    <a href="">AAM</a>
+                </div>
+                <div class="nav-text ">
+                    <a href="#homes">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#portfolio">Portfolio</a>
+                    <a href="#services">service</a>
+                    <a href="#contact">contact</a>
+                </div>
+            </nav>
+
+        </section>
+
+        <section id="homes">
+            <div class="home">
+
+                <div>
+                    <h1 class="intro">HI I`M ABDULLA AL MAMUN</h1>
+                </div>
+
+            </div>
+
+        </section>
+    </header>
+
+    <main>
+        <section id="about">
+            <h1 style="text-align: center;margin:20px 0px; font-size: 40px;">About</h1>
+            <div style="height: 300px;display: flex;background-color: cadetblue;justify-content: space-around;align-items: center;"
+                class="about-container">
+                <div style="width: 40%;">
+                    <img style="width: 50%;border-radius: 10px;" src="photo/img02.png" alt="">
+                </div>
+                <div style="width:40%">
+                    <h4>My name is ABC & I AM a Front-End Developer</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, quod.</p>
+                    <div style="display: flex;justify-content: space-between;">
+                        <div>
+                            <p>Age:</p>
+                            <p>Gender:</p>
+                            <p>Language:</p>
+                            <p>work:</p>
+                            <button>Download Cv</button>
+                        </div>
+                        <div>
+                            <p>Freelance:</p>
+                            <p>Phone:</p>
+                            <p>Email:</p>
+                            <p>Country:</p>
+                            <button>Hire Me</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio">
+            <h1 style="text-align: center;margin:20px 0px; font-size: 40px;">Portfolio</h1>
+            <div class="portfolio-container">
+                <div class="one-third">
+                    <img src="photo/Banking.jpg" alt="">
+                    <h3>E-commerce</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eligendi dolorem soluta amet
+                        cupiditate nemo.</p>
+                </div>
+                <div class="one-third">
+                    <img src="photo/Medical.jpg" alt="">
+                    <h3>Hospital Management</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eligendi dolorem soluta amet
+                        cupiditate nemo.</p>
+                </div>
+                <div class="one-third">
+                    <img src="photo/Restaurant.jpg" alt="">
+                    <h3>Restaurant</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eligendi dolorem soluta amet
+                        cupiditate nemo.</p>
+                </div>
+            </div>
+        </section>
+        <section id="services">
+            <h1 style="text-align: center;margin:20px 0px; font-size: 40px;">Services</h1>
+            <div style="height:150px;">
+                <table style="margin: 0px auto;">
+                    <tr>
+                        <th>Songs Site</th>
+                        <th>E-Commerce Site</th>
+                    </tr>
+                    <tr>
+                        <th>Movies Site</th>
+                        <th>Official Site</th>
+                    </tr>
+                    <tr>
+                        <th>Games Site</th>
+                        <th>University Site</th>
+                    </tr>
+                </table>
+            </div>
+        </section>
+        <section id="contact">
+            <h1 style="text-align: center;margin:20px 0px; font-size: 40px;">Contact</h1>
+            <div
+                style="height: 300px;background-color:burlywood;display: flex; justify-content: center;align-items: center;">
+                <div>
+                    <input style="height: 30px;margin-left: 5px;font-size: 17px;" type="email" name="" id=""
+                        placeholder="enter your email">
+                    <button type="submit">Submit</button>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <p style="text-align: center;">@copy right by abdulla al mamum ,2022</p>
+        </footer>
+
+    </main>
+
 
 </body>
 
