--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
         </section>
         <footer>
-            <p style="text-align: center;">@copy right by abdulla al mamum ,2022</p>
+            <p style="text-align: center;">@copy-right-by abdulla-al-mamum ,2022</p>
         </footer>
 
     </main>
